# contacts_book

./: .env.exemple  .gitignore  Dockerfile  README.md  app.py  celery_worker.py  docker-compose.yml  middleware.py  pyproject.toml  seed_script.py
bdaybot/: app.py
bdaybot/src/models/: models.py
bdaybot/src/repository/: bday_bot.py
bdaybot/src/routes/: bday_bot.py  contact_emails.py  contact_phones.py  contacts.py
bdaybot/src/schemas/: bday_bot.py  custom_validators.py  request_schema.py  response_schema.py
contacts_book/: app.py  celery_worker.py
contacts_book/src/auth/: models.py  repository.py  routes.py  security.py  services.py
contacts_book/src/contacts/: models.py  repository.py
contacts_book/src/core/: config.py  connection.py
contacts_book/src/mail_services/: models.py  prepare_letters_template.py  repository.py  routes.py  service.py
contacts_book/src/models/: models.py
contacts_book/src/repository/: book.py
contacts_book/src/routes/: contact_emails.py  contact_phones.py  contacts.py
contacts_book/src/schemas/: request_schema.py  response_schema.py
contacts_book/src/templates/: email_verification.html
contacts_book/src/users/: models.py  repository.py  schemas.py
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 39d620a21674_init.py  40550ec471e7_add_qr_code_to_content_model.py  413e23d14a82_update_comments_model.py  7a626c5bb5d5_init.py  95862411d2ad_add_contacts_models.py  ab3f80f74b17_add_comments_model.py  ad2f420bc347_init.py  b3a4b82e7ec7_init.py  cffe0ea796c4_init.py  d05ef5b3bee6_add_qr_code_to_content_model2.py  d2fbb0daec16_update_user_model.py  eb24b68e9c29_person_model_updated.py  fc0a859d8d78_add_last_user_activity_row_in_users.py  ff69acb5b1f5_init.py
src/admin/: repository.py  routes.py
src/admin/comments/: repository.py  routes.py
src/admin/posts/: repository.py  routes.py  schemas.py
src/admin/users/: repository.py  routes.py
src/auth/: models.py  repository.py  routes.py  schemas.py  security.py  services.py
src/contacts/: models.py  repository.py
src/contacts/routes/: contact_emails.py  contact_phones.py  contacts.py
src/contacts/schemas/: custom_validators.py  request_schema.py  response_schema.py
src/core/: config.py  connection.py  message.py
src/core/models/: __init__.py
src/mail_services/: models.py  prepare_letters_template.py  repository.py  routes.py  schemas.py  service.py
src/posts/: filter_enums.py  models.py  repository.py  routes.py  schemas.py  shcemas.py
src/posts/repositories/: comment_repository.py  post_rating_repository.py  post_repository.py
src/posts/routes/: comments_routes.py  post_rating_routes.py  post_routes.py
src/services/: cloudinary_service.py  redis_service.py
src/users/: models.py  repository.py  routes.py  schemas.py
tests/: conftest.py  test_e2e_auth.py  test_e2e_mail_services.py  test_unit_repository.py  tests_config.py
theregram_proj/: app.py  celery_worker.py  middleware.py  seed_script.py
(+27 files in other folders)
