[project]
name = "fastapi-research"
version = "0.1.0"
description = ""
authors = [
    {name = "Abboth",email = "Alexmikhailov90@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.1,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-extra-types (>=2.10.3,<3.0.0)",
    "phonenumbers (>=9.0.3,<10.0.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "libgravatar (>=1.0.4,<2.0.0)",
    "user-agents (>=2.2.0,<3.0.0)",
    "celery (>=5.5.1,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "fastapi-mail (>=1.4.2,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "fastapi-limiter (>=0.1.6,<0.2.0)",
    "cloudinary (>=1.44.0,<2.0.0)",
    "qrcode[pil] (>=8.2,<9.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
aiosqlite = "^0.21.0"
pytest-asyncio = "^0.26.0"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests"]
pythonpath = ["."]